Actualizacion de ventanas estadisticas